--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     }
 
     .section-button {
-      background-color: #2c3e50;
+       background-color: #00aeff;
       color: #ecf0f1;
       padding: 20px 60px;  /* Standard padding for consistency */
       margin: 15px;
