--- a/index.html
+++ b/index.html
@@ -13,10 +13,6 @@
       background-size: 400% 400%;
       animation: gradientShift 15s ease infinite;
       height: 100vh;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      color: #ffffff;
       overflow: hidden;
     }
 
@@ -27,9 +23,15 @@
     }
 
     .container {
+      height: 100vh;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
       text-align: center;
       padding: 20px;
       backdrop-filter: blur(10px);
+      color: #ffffff;
     }
 
     h1 {
@@ -80,14 +82,21 @@
       text-decoration: none;
     }
 
-    video {
-      margin-top: 40px;
-      width: 80%;
-      max-width: 720px;
+    #fullscreenVideo {
       display: none;
-      border: 2px solid #fff;
-      border-radius: 12px;
-      box-shadow: 0 0 20px #00ffff;
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100vw;
+      height: 100vh;
+      z-index: 9999;
+      background: black;
+    }
+
+    #fullscreenVideo video {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
     }
 
     @media (max-width: 600px) {
@@ -100,15 +109,11 @@
         padding: 12px 20px;
         min-width: 180px;
       }
-
-      video {
-        width: 95%;
-      }
     }
   </style>
 </head>
 <body>
-  <div class="container">
+  <div class="container" id="mainContent">
     <h1>YOU ARE ONLY MINE..</h1>
     <div id="button-section">
       <a href="https://forms.gle/kDRV9GYFqGtdu7yH9" target="_blank">
@@ -117,19 +122,24 @@
       <a href="https://drive.google.com/drive/folders/1aagJ8VZjIdq9s-Jg6r9q7Ms2ryaCq_GcYH1GBJukm_FnyZZ7Q1dy6tAHJTmmpfkkWCcgfe8P?usp=sharing" target="_blank">
         <button class="glow-button">VIEW PROOFS</button>
       </a>
-      <button class="glow-button" onclick="showVideo()">HOW TO DO IT</button>
+      <button class="glow-button" onclick="playTutorial()">HOW TO DO IT</button>
     </div>
+  </div>
 
-    <video id="tutorialVideo" controls>
-      <source src="proof%20tutorial.mp4" type="video/mp4">
+  <!-- Fullscreen Video Wrapper -->
+  <div id="fullscreenVideo">
+    <video id="videoPlayer" controls autoplay>
+      <source src="proof%20tutorial.mp4" type="video/mp4" />
       Your browser does not support the video tag.
     </video>
   </div>
 
   <script>
-    function showVideo() {
-      const video = document.getElementById("tutorialVideo");
-      video.style.display = "block";
+    function playTutorial() {
+      document.getElementById("mainContent").style.display = "none";
+      document.getElementById("fullscreenVideo").style.display = "block";
+      const video = document.getElementById("videoPlayer");
+      video.currentTime = 0;
       video.play();
     }
   </script>
