--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
       <a href="https://forms.gle/kDRV9GYFqGtdu7yH9" target="_blank">
         <button class="glow-button">UPLOAD PROOF</button>
       </a>
-      <a href="https://drive.google.com/drive/folders/1aagJ8VZjIdq9s-Jg6r9q7Ms2ryaCq_GcYH1GBJukm_FnyZZ7Q1dy6tAHJTmmpfkkWCcgfe8P?usp=sharing" target="_blank">
+      <a  target="_blank">
         <button class="glow-button">VIEW PROOFS</button>
       </a>
       <button class="glow-button" onclick="playTutorial()">HOW TO DO IT</button>
